tests/error/inout_errors/already_used.err
Error: Copy violation (at $FILE:21:8)
   | 
19 | def test(q: qubit @owned) -> None:
20 |     use(q)
21 |     foo(q)
   |         ^ Variable `q` with non-copyable type `qubit` cannot be
   |           borrowed ...
   | 
20 |     use(q)
   |         - since it was already consumed here

Guppy compilation failed due to 1 previous error
